<resources>
    <string name="app_name">MnayaFerreteriaMySql</string>

    <!--LOGIN-->
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="portada_ferreteria">Ferretería</string>
    <string name="inicio_sesion">Inicia sesión</string>
    <string name="info">Herramientas y Soluciones S.L.®</string>

    <!--PRINCIPAL-->
    <string name="principal_title">Artículos destacados</string>
    <string name="subtitle_destacados">Encuentra las mejores herramientas</string>

    <!--NUEVO ARTÍCULO-->
    <string name="nuevo_articulo_title">Nuevo Artículo</string>
    <string name="info_articulo_nuevo">Información del Artículo</string>
    <string name="campo_articulo_hint">Nombre del artículo</string>
    <string name="campo_descripcion_hint">Descripción</string>
    <string name="campo_precio_hint">Precio</string>
    <string name="campo_stock_hint">Stock</string>
    <string name="opciones_especiales">Opciones Especiales</string>
    <string name="categoria">Categoría</string>
    <string name="origen">Origen</string>
    <string name="registrar">Registrar</string>
    <string name="destacado">Destacado</string>
    <string name="oferta">Oferta</string>
    <string name="error_database_title">Error de la base de datos</string>
    <string name="registro_articulo_title">Registro de artículo</string>

    <!--DETALLE ARTÍCULO-->
    <string name="title_detalle_articulo">Detalle del Artículo</string>
    <string name="id_detalle_articulo">ID:</string>
    <string name="nombre_detalle_articulo">Nombre del Artículo</string>
    <string name="info_inventario">Información de Inventario</string>
    <string name="precio_hint">Precio (€)</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="guardar">Guardar</string>

    <!--DETALLE DE USUARIO-->
    <string name="tipo_usuario">Tipo de Usuario</string>


    <!--NUEVO USUARIO-->
    <string name="nuevo_usuario_title">Nuevo Usuario</string>
    <string name="tipo">Tipo</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="credenciales">Credenciales de Acceso</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="registro_usuario_title">Registro de usuario</string>

    <!--MI CUENTA-->
    <string name="title_cuenta">Mi Cuenta</string>
    <string name="arroba">\@</string>
    <string name="info_personal">Información Personal</string>
    <string name="seguridad">Seguridad</string>
    <string name="info_edit_cuenta">Pulsa \"Editar\" para modificar tus datos y \"Guardar\" para confirmar los cambios</string>
    <string name="btn_editar_perfil">Editar Perfil</string>
    <string name="btn_guardar_perfil">Guardar Cambios</string>

    <!--MENU-->
    <string name="item_listado_articulos">Listado de artículos</string>
    <string name="item_ofertas">Ofertas</string>
    <string name="item_nuevo_articulo">Nuevo artículo</string>
    <string name="item_listado_usuarios">Listado de usuarios</string>
    <string name="item_nuevo_usuario">Nuevo usuario</string>
    <string name="item_cuenta">Mi cuenta</string>
    <string name="item_cerrar_sesion">Cerrar sesión</string>

    <!--LISTA OFERTAS-->
    <string name="title_ofertas">Ofertas Especiales</string>
    <string name="ofertas">Ofertas</string>
    <string name="descuentos">¡DESCUENTOS!</string>
    <string name="subtitle_ofertas">Aprovecha nuestras mejores ofertas</string>

    <!--LISTA USUARIOS-->
    <string name="title_lista_usuarios">Gestión de Usuarios</string>
    <string name="usuarios">Usuarios</string>

    <!--LISTA ARTÍCULOS-->
    <string name="title_lista_articulos">Listado de Artículos</string>
    <string name="inventario_completo">Inventario Completo</string>

    <!--AVISOS-->
    <string name="campo_obligatorio_title">Campo obligatorio</string>
    <string name="eliminar_articulo_title">Eliminar artículo</string>
    <string name="eliminar_articulo_message">Va a eliminar el artículo ¿Quiere confirmar?</string>
    <string name="error_carga_datos">Error en la carga de datos</string>
    <string name="eliminar_usuario_title">Eliminar usuario</string>
    <string name="eliminar_usuario_message">Va a eliminar el usuario ¿Quiere confirmar?</string>


    <!--ARRAYS SPINNERS-->
    <string-array name="spinner_categoria">
        <item>Seleccione</item>
        <item>Menaje</item>
        <item>Jardín</item>
        <item>Iluminación</item>
        <item>Herramientas</item>
    </string-array>
    <string-array name="spinner_origen">
        <item>Seleccione</item>
        <item>Nacional</item>
        <item>Internacional</item>
    </string-array>
    <string-array name="spinner_tipo_usuario">
        <item>Seleccione</item>
        <item>User</item>
        <item>Admin</item>
    </string-array>
</resources>