<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.NuevoArticulo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNuevoArticulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/nuevo_articulo_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarNuevoArticulo">

        <EditText
            android:id="@+id/campoArticulo"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/campo_articulo_hint"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/campo_descripcion_hint"
            android:text="@string/categoria" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:entries="@array/spinner_categoria" />

        <EditText
            android:id="@+id/campoDescripcion"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/campo_descripcion_hint"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/campoPrecio"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/campo_precio_hint"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/campoStock"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/campo_stock_hint"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/origen" />

        <Spinner
            android:id="@+id/spinnerOrigen"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:entries="@array/spinner_origen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioDestacado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/destacado" />

            <RadioButton
                android:id="@+id/radioOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/oferta" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegistroArticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/registrar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>